src/zmi/styles/resources/zmi_base.css
/* ... */
/* MODAL DIALOG */

#zmi-modal main > form > table.table {
	margin: 0;
}
#zmi-modal i.zmi-help-icon {
	display: block;
	margin: 0 -1rem 1rem 0;
	text-align: right;
}
#zmi-modal i.zmi-help-icon.active {
	color:#007bff;
}
#zmi-modal p.form-help {
	padding: 1rem;
	border: 1px solid #ced4da;
	border-radius: 0.4rem;
	background: #f1f4f7;
	margin-top: -1rem;
}
@media (min-width: 576px) {
	#zmi-modal {
		padding-left:.5rem;
	}
	#zmi-modal .modal-dialog {
		max-width:-moz-fit-content;
		max-width: fit-content;
	}
	#zmi-modal .modal-body {
		width:calc(100vw - 300px);
		min-width:500px;
	}
	#zmi-modal .modal-body[data-add_type="addIdManager"] {
		min-width:800px;
	}
}

/* OBECT CLASS Site-Error-Log */
.zmi-Site-Error-Log div.zmi-traceback.code {
	padding: 1rem;
	background: #212529;
	border-radius: .4rem;
	margin: 1rem 0;
	color: white;
}
.zmi-Site-Error-Log div.zmi-request-object table {
	background: #212529;
	width: 100%;
	border-radius:6px;
}
.zmi-Site-Error-Log div.zmi-request-object table tr th {
	color:#ccc;
	font-size:87%;
	white-space: nowrap;
	padding: .5rem 1rem;
	font-weight:normal;
}
.zmi-Site-Error-Log div.zmi-request-object table tr td {
	padding: .5rem 1rem;
	font-family: monospace;
	color: white;
	width: 100%;
}
@media (min-width: 768px) {
	.zmi-Site-Error-Log table.zmi-errorlog-entry tr.value td,
	.zmi-Site-Error-Log div.zmi-traceback.code p {
		white-space:pre;
	}
}
/* OBJECT CLASS ZCatalog */
@media (min-width: 577px) {
	body.zmi-ZCatalog {
		min-width: max-content;
	}
	body.zmi-ZCatalog:not(.zmi-manage_catalogFind) main.container-fluid {
		width: 100vw;
		margin-right: unset;
		margin-left: unset;
	}
	body.zmi-ZCatalog.zmi-manage_catalogPlan textarea.form-control.zmi-patch {
		width:auto !important;
		max-width: 100%;
	}
}
.zmi-manage_catalogAdvanced table td form > * {
	width:12rem;
}


/* STYLE PATCHES TO ANCIENT ZOPE FORMS */

main.zmi-patch:after {
	content:"Design Hints: This layout is still not updated to ZMI conventions of Zope 4";
	font-family: monospace;
	font-size:12px;
	padding:24px 0 24px 0;
	color:#ced4da;
	font-style:italic;
}
table.zmi-patch th,
table.zmi-patch td {
	font-weight:normal;
	border:none;
	padding-left:0;
	padding-right:2rem
}
table.zmi-patch  {
	background-color:transparent !important;
}


/* EXAMPLE: CUSTOMIZE HEADER */
header.navbar,
header.navbar select.form-control-sm,
.zmi-manage_menu #menu_buttons {
	background: #354f67;
}
.zmi-manage_menu #menu_buttons ul.dropdown-menu  {
	background-color:#646d75;
}

@media (min-width: 960px) {
	.zmi-manage_menu #menu_buttons ul.dropdown-menu {
		background-image:url("logo/Zope_white_opacity12.svg");
		background-size:97%;
		background-position: bottom center;
		background-repeat:no-repeat;

	}
}
.zmi-zope_copyright h2 {
	font-size: 130%;
	color: white;
	margin: 0;
}

/* EXAMPLE: IMPLANT YOUR LOGO */
/*
	.zmi-manage_menu {
		height:100vh;
	}
	.zmi-manage_menu,
	.zmi-manage_menu #menu_buttons ul.dropdown-menu {
		background-size:contain;
		background-position: bottom left;
		background-repeat:no-repeat;
	}
	.zmi-manage_menu {
		background-image:url("logo/Zope_black_opacity12.svg");
	}
	.zmi-manage_menu #menu_buttons ul.dropdown-menu  {
		background-image:url("logo/Zope_opacity12.svg");
	}
	@media (min-width: 768px) {
		header.navbar-nav .product {
			background-position: 0 9px;
			background-repeat:no-repeat;
			background-image:url("logo/Zope_white.svg");
			background-size:92px;
			height:42px;
			width:130px;
			display:inline-block;
			color:transparent
		}
	}
*/

